--- a/.github/workflows/sysbench_smallfile_seqrw.yml
+++ b/.github/workflows/sysbench_smallfile_seqrw.yml
@@ -54,28 +54,56 @@ jobs:
           sudo apt -y install sysbench
 
 
-      - name: Smallfile Test 1M
+      - name: Smallfile Test Read 1M
         run: |
           cd /jfs
-          sudo ls -lh
-          sudo df -lh
-          sudo stat /jfs
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  prepare
-          sudo ls -lh
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  run
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  cleanup
-          sudo ls -lh
-          sudo df -lh
-
-      - name: Smallfile Test
-        run: |
-          cd ~
           pwd
           sudo ls -lh
           sudo df -lh
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  prepare
+          sudo stat /jfs
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrd --time=600  prepare
           sudo ls -lh
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  run
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrewr --time=480  cleanup
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrd --time=600  run
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrd --time=600  cleanup
+          sudo ls -lh
+          sudo df -lh
+
+      - name: Smallfile Test Write 1M
+        run: |
+          cd /jfs
+          pwd
+          sudo ls -lh
+          sudo df -lh
+          sudo stat /jfs
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrd --time=600  prepare
+          sudo ls -lh
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrd --time=600  run
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=seqrd --time=600  cleanup
+          sudo ls -lh
+          sudo df -lh
+
+      - name: Smallfile Test 100K
+        run: |
+          cd /jfs
+          pwd
+          sudo ls -lh
+          sudo df -lh
+          sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=seqwr --time=600  prepare
+          sudo ls -lh
+          sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=seqwr --time=600  run
+          sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=seqwr --time=600  cleanup
+          sudo ls -lh
+          sudo df -lh
+
+      - name: Smallfile Test 100K
+        run: |
+          cd /jfs
+          pwd
+          sudo ls -lh
+          sudo df -lh
+          sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=seqwr --time=600  prepare
+          sudo ls -lh
+          sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=seqwr --time=600  run
+          sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=seqwr --time=600  cleanup
           sudo ls -lh
           sudo df -lh
