add tmate to action (#1188)

--- a/.github/workflows/ltpsyscallshead.yml
+++ b/.github/workflows/ltpsyscallshead.yml
@@ -65,3 +65,7 @@ jobs:
           sudo head -n 600 runtest/syscalls > runtest/syscallshead
           sudo chmod 777 runtest/syscallshead
           sudo ./runltp -d /tmp/jfs -f syscallshead -C result.log.failed -T result.log.tconf -l result.log
+
+      - name: Setup tmate session
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
