--- a/.github/workflows/ltpsyscallsmiddle.yml
+++ b/.github/workflows/ltpsyscallsmiddle.yml
@@ -66,3 +66,8 @@ jobs:
           sudo tail -n 700  runtest/syscallstmp > runtest/syscallsmiddle
           sudo chmod 777 runtest/syscallsmiddle
           sudo ./runltp -d /tmp/jfs -f syscallsmiddle -C result.log.failed -T result.log.tconf -l result.log
+
+
+      - name: Setup tmate session
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
