--- a/.github/workflows/sysbench_smallfile_randrw.yml
+++ b/.github/workflows/sysbench_smallfile_randrw.yml
@@ -53,11 +53,6 @@ jobs:
           curl -s https://packagecloud.io/install/repositories/akopytov/sysbench/script.deb.sh | sudo bash
           sudo apt -y install sysbench
 
-      - name: Get Token
-        run: |
-          echo "${{secrets.FILE_UPLOAD_AUTH_TOKEN}}"
-          echo "hello" > hello
-          curl -w '%{http_code}' -F file=@hello https://juicefs.com/upload-file-u80sdvuke/hello?token=${{secrets.FILE_UPLOAD_AUTH_TOKEN}}
 
       - name: Smallfile Test 1M
         run: |
@@ -68,11 +63,13 @@ jobs:
           sudo stat /jfs
           sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  prepare
           sudo ls -lh
-          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  run >result_rw_1M_600s
+          fileName=result_rndrw_1M_6000_'date +%Y_%m_%d_%H_%M_%S'
+          sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  run >"$fileName"
           sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  cleanup
           sudo ls -lh
           sudo df -lh
-          curl -w '%{http_code}' -F file=@result_read_1M_600s https://juicefs.com/upload-file-u80sdvuke/result_rw_1M_600s
+          sudo ls -lh $fileName
+          curl -w '%{http_code}' -F file=@"$fileName" https://juicefs.com/upload-file-u80sdvuke/$fileName
 
       - name: Smallfile Test 100K
         run: |
@@ -82,10 +79,12 @@ jobs:
           sudo df -lh
           sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  prepare
           sudo ls -lh
-          sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  run >result_rw_100K_600s
+          fileName=result_rndrw_100K_60000_'date +%Y_%m_%d_%H_%M_%S'
+          sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  run >"$fileName"
           sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  cleanup
           sudo ls -lh
           sudo df -lh
-          curl -w '%{http_code}' -F file=@result_rw_100K_600s https://juicefs.com/upload-file-u80sdvuke/result_rw_100K_600s
+          sudo ls -lh $fileName
+          curl -w '%{http_code}' -F file=@$fileName https://juicefs.com/upload-file-u80sdvuke/$fileName
 
 
