--- a/.github/workflows/sysbench_smallfile_randrw.yml
+++ b/.github/workflows/sysbench_smallfile_randrw.yml
@@ -63,7 +63,10 @@ jobs:
           sudo stat /jfs
           sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  prepare
           sudo ls -lh
-          fileName=result_rndrw_1M_6000_$(date +%Y_%m_%d_%H_%M_%S)
+          datetime=$(date +%Y_%m_%d_%H_%M_%S)
+          fileName=result_rndrw_1M_6000_$datetime
+          echo "$fileName is"
+          echo $fileName
           sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  run >"$fileName"
           sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  cleanup
           sudo ls -lh
@@ -74,13 +77,17 @@ jobs:
 
       - name: Smallfile Test 100K
         run: |
+          echo "$datetime is"
+          echo $datetime
+          echo "pwd is"
+          pwd
           cd /jfs
           pwd
           sudo ls -lh
           sudo df -lh
           sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  prepare
           sudo ls -lh
-          fileName=result_rndrw_100K_60000_$(date +%Y_%m_%d_%H_%M_%S)
+          fileName=result_rndrw_100K_60000_$datetime
           sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  run >"$fileName"
           sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  cleanup
           sudo ls -lh
