--- a/.github/workflows/sysbench_smallfile_randrw.yml
+++ b/.github/workflows/sysbench_smallfile_randrw.yml
@@ -17,8 +17,6 @@ on:
 jobs:
   sysbenchsmallfilerandrw:
     runs-on: ubuntu-latest
-    env:
-      DATE_TIME: $(date +%Y_%m_%d_%H_%M_%S)
     steps:
       - name: Set up Go
         uses: actions/setup-go@v2
@@ -58,15 +56,17 @@ jobs:
 
       - name: Smallfile Test 1M
         run: |
+          date +%Y_%m_%d_%H_%M_%S > /tmp/datetime
+          DATE_TIME=$(cat /tmp/datetime)
           echo "DATE_TIME is"
-          echo ${{env.DATE_TIME}}
+          echo $DATE_TIME
           cd /jfs
           pwd
           sudo df -lh
           sudo stat /jfs
           sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  prepare
           echo "DATE_TIME is"
-          fileName=result_rndrw_1M_6000_${{env.DATE_TIME}}
+          fileName=result_rndrw_1M_6000_$DATE_TIME
           echo "fileName is"
           echo $fileName
           sysbench fileio --file-num=6000  --file-total-size=6G --file-test-mode=rndrw --time=600  run >"$fileName"
@@ -78,8 +78,9 @@ jobs:
 
       - name: Smallfile Test 100K
         run: |
+          DATE_TIME=$(cat /tmp/datetime)
           echo "DATE_TIME is"
-          echo ${{env.DATE_TIME}}
+          echo $DATE_TIME
           echo "pwd is"
           pwd
           cd /jfs
@@ -87,8 +88,8 @@ jobs:
           sudo df -lh
           sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  prepare
           echo "DATE_TIME is"
-          echo ${{env.DATE_TIME}}
-          fileName=result_rndrw_1M_6000_${{env.DATE_TIME}}
+          echo $DATE_TIME
+          fileName=result_rndrw_100K_60000_$DATE_TIME
           sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  run >"$fileName"
           sysbench fileio --file-num=60000  --file-total-size=6G --file-test-mode=rndrw --time=600  cleanup
           sudo df -lh
