--- a/.github/workflows/sysbench_smallfile_randrw.yml
+++ b/.github/workflows/sysbench_smallfile_randrw.yml
@@ -3,7 +3,7 @@ name: "sysbench"
 on:
   push:
     branches:
-      - 'release-**'
+      - 'main'
     paths-ignore:
       - 'docs/**'
   pull_request:
