--- a/.github/workflows/pjdfstest.yml
+++ b/.github/workflows/pjdfstest.yml
@@ -50,6 +50,7 @@ jobs:
 
       - name: Pjdfstest
         run: |
+          cat /tmp/err
           sudo apt-get update
           sudo apt-get install -y libtap-harness-archive-perl
           cd /tmp/jfs/
