--- a/.github/workflows/sysbench_smallfile_randrw.yml
+++ b/.github/workflows/sysbench_smallfile_randrw.yml
@@ -3,13 +3,13 @@ name: "sysbench"
 on:
   push:
     branches:
-      - 'main'
+      - 'release-**'
     paths-ignore:
       - 'docs/**'
   pull_request:
     #The branches below must be a subset of the branches above
     branches:
-      - 'main'
+      - 'release-**'
     paths-ignore:
       - 'docs/**'
 
